<resources>
    <string name="app_name">PrimerosAuxilios</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cardiaco">Ataque cardiaco</string>
    <string name="exploracion">Exploración de un herido</string>
    <string name="desmayo">Desmayo</string>
    <string name="envenenamiento">Envenenamiento</string>
    <string name="profunda">Tratamiento de heridas profundas</string>
    <string name="alergica">Reacciones alérgicas</string>
    <string name="Quemadura">Quemadura</string>
    <string name="sofocacion">Sofocación</string>
    <string name="dental">Problemas dentales</string>
    <string name="esguince">Esguinces y luxaciones</string>
    <string name="electrocucion">Electrocución</string>
    <string name="vendas">Aplicación de vendas</string>
    <string name="picadura">Picaduras y mordeduras de animales</string>
    <string name="bocaaboca">Respiración boca a boca</string>
    <string name="reanimacion">Reanimación cardiopulmonar (RCP)</string>
    <string name="ojos">Emergencias oftalmológicas</string>
    <string name="titulo">Guía básica de primeros auxilios</string>
    <string name="title_activity_activity_exploracion">ActivityExploracion</string>
    <string name="botiquin">Contenido botiquín</string>
    <string name="regresar">Regresar</string>
    <string name="salir">Salir aplicación</string>
    <string name="title_activity_activity_ataque_cardiaco">ActivityAtaqueCardiaco</string>
    <string name="ExploracionParte1">Después de un accidente se puede realizar una revisión del cuerpo del paciente con el objetivo de recopilar información para ayudar al médico cuando llegue a atender a la víctima.</string>
    <string name="PasosASeguir">Pasos a seguir: </string>
    <string name="Exploracionparte31">Con palmadas muy suaves en la cabeza trate de averiguar si existe sangrado, hinchazón o hundimiento,  sin embargo si sospecha que la víctima tiene el cuello lesionado evite mover su cabeza.</string>
    <string name="Exploracionparte32">Hablado con una voz muy suave en cada oído verifique si la victima responde, también se debe verificar que las pupilas de los ojos son del mismo tamaño y que la nariz no segregue sangre abundantemente. </string>
    <string name="Exploracionparte33">Lo siguiente es verificar la frecuencia de respiración de la víctima, incluyendo el color, temperatura y estado de la piel el color azul en los labios indica falta de oxígeno. También pedimos a la víctima que mueva las muñecas, codos y que pueda estirar las extremidades todo muy suavemente, en caso de que la víctima no pueda mover un miembro hay que evitar moverla. </string>
    <string name="Exploracionparte4">Si la victima esta consiente tome los siguientes datos: </string>
    <string name="Exploracionparte5">- Nombre y domicilio de la víctima </string>
    <string name="Exploracionparte6">- Historial del accidente o enfermedad.</string>
    <string name="Exploracionparte7">- Breve descripción de lesiones. </string>
    <string name="Exploracionparte8">- Cualquier comportamiento extraño. </string>
    <string name="Exploracionparte9">- Tratamiento aplicado, y a qué hora. </string>
    <string name="Exploracionparte10">- Nivel de consciencia, respiración y pulso. </string>
    <string name="cardiaco1">Un ataque cardíaco ocurre cuando el flujo de sangre que lleva oxígeno al corazón se bloquea. El miocardio queda privado de oxígeno y comienza a morir.</string>
    <string name="cardiaco2">Los síntomas son variados pero generalmente incluyen:</string>
    <string name="cardiaco3">- Dolor torácico que se siente como presión, compresión o llenura. El dolor generalmente se ubica en el centro del pecho, incluso este se puede extender por los hombros.</string>
    <string name="cardiaco4">- Presentar sudor y frío.</string>
    <string name="cardiaco5">- Mareos o vómitos</string>
    <string name="cardiaco6">- Entumecimiento, dolor u hormigueo en el brazo (por lo general el izquierdo, pero el brazo derecho puede verse afectado individualmente o en conjunto con el izquierdo)</string>
    <string name="cardiaco7">- Dificultad para respirar.</string>
    <string name="cardiaco8">- Debilidad o fatiga.</string>
    <string name="cardiaco9">- Un colapso repentino.</string>
    <string name="cardiaco10">- Llamar inmediatamente a emergencias o si es posible llevarlo al hospital más cercano.</string>
    <string name="cardiaco11">- Afloje cualquier prenda de vestir ajustada.</string>
    <string name="cardiaco12">- Si no se colapsó hágalo sentar y procure tranquilizar al paciente, evite acostarlo si presenta dificultades para respirar.</string>
    <string name="cardiaco13">- Administre reanimación cardiopulmonar (R.C.P.) sólo si no existe otra persona más capacitada para realizar el procedimiento.</string>
    <string name="cardiaco14">- Evite dejar sola a la persona.</string>
    <string name="cardiaco15">- NO permita que la persona niegue los síntomas y lo convenza a usted de no solicitar ayuda de emergencia.</string>
    <string name="desmayo1">Es la repentina pérdida de conocimiento a menudo es breve, puede deberse a muchos factores el desmayo debe tratarse como una emergencia.</string>
    <string name="desmayo2">- Evite despertar a la víctima por medio de agitaciones, bofetadas o echarle agua fría.</string>
    <string name="electrocucion1">Una lesión por electrocución se debe al contacto con corriente eléctrica sobre el cuerpo, puede ser debido a la mala manipulación de cables, truenos o acercar un aparato a una fuente de agua.</string>
    <string name="electrocucion2">Los efectos que esta clase de accidentes puede generar son:</string>
    <string name="electrocucion3">- Paro cardiaco.</string>
    <string name="electrocucion4">- La destrucción de músculos o tejidos.</string>
    <string name="electrocucion5">- Quemaduras en la región del contacto.</string>
    <string name="electrocucion6">- Cambios lucidez mental.</string>
    <string name="electrocucion7">- Convulsiones.</string>
    <string name="electrocucion8">- Sensación de hormigueo.</string>
    <string name="electrocucion9">- Dolor de cabeza.</string>
    <string name="electrocucion10">- Si se está electrocutando la victima NO debe tocarla, para ello apague la fuente de electricidad, si no lo puede hacer retire a la víctima con un objeto de madera como una escoba o un objeto de caucho, no hacerlo con objetos metálicos o húmedos.</string>
    <string name="electrocucion11">- Llamar a emergencias.</string>
    <string name="electrocucion12">- Si se paró el corazón aplique reanimación cardiopulmonar.</string>
    <string name="electrocucion13">- Si se paró la respiración aplique respiración de boca a boca.</string>
    <string name="electrocucion14">- En caso de quemaduras aplicar una toalla limpia y húmeda sobre la herida para evitar infecciones.</string>
    <string name="oftalmologica1">El ojo a menudo se limpia a sí mismo de pequeños objetos, como pestañas o arena, a través del pestañeo o el lagrimeo. Si no sucede esto, no frote el ojo ni apriete los párpados. Posteriormente proceda a examinar el ojo. Al hacerlo, tenga mucho cuidado de no presionar el ojo.</string>
    <string name="oftalmologica2">- Lávese las manos con agua y jabón.</string>
    <string name="oftalmologica3">- Examine el ojo en un área con buena iluminación. Para encontrar el cuerpo extraño, pídale a la persona que mire hacia arriba y hacia abajo, y luego de un lado a otro.</string>
    <string name="oftalmologica4">- Si no puede encontrar el objeto, agarre el párpado inferior y jale hacia abajo con suavidad para mirar debajo de dicho párpado. Para mirar debajo del párpado superior, se puede colocar un aplicador de algodón en la parte exterior de dicho párpado y estirar suavemente el párpado por encima del aplicador.</string>
    <string name="oftalmologica5">- Si el objeto está en el párpado, trate de lavarlo suavemente con agua. Si esto no funciona, pruebe tocando el objeto con un segundo aplicador de algodón para retirarlo.</string>
    <string name="oftalmologica6">- Si el objeto está en el ojo, trate de enjuagar suavemente el ojo con agua. Si está disponible, use un gotero ubicado por encima de la esquina exterior del ojo. No toque el ojo directamente con la punta del gotero.</string>
    <string name="oftalmologica8">OBJETO CLAVADO O INCRUSTADO EN EL OJO:</string>
    <string name="oftalmologica9">- Deje el objeto en el mismo sitio. No intente retirarlo ni tocarlo, ni aplicar presión alguna.</string>
    <string name="oftalmologica10">- Calme y dele seguridad a la persona.</string>
    <string name="oftalmologica11">- Lávese las manos con agua y jabón.</string>
    <string name="oftalmologica12">- Vende ambos ojos. Cubrir ambos ojos ayuda a prevenir el movimiento ocular. Si el objeto es grande, coloque una taza o un cono de papel sobre el ojo lesionado y péguelo con cinta. Esto evita que el objeto se presione más dentro del ojo provocando una lesión mayor. Si el objeto es pequeño, cubra ambos ojos.</string>
    <string name="oftalmologica13">- Consiga ayuda médica de inmediato. No se demore.</string>
    <string name="oftalmologica14">- QUÍMICOS EN EL OJO:</string>
    <string name="oftalmologica15">- Lave a chorro la zona con agua corriente de inmediato. Gire la cabeza de la persona, de manera que el ojo lesionado quede hacia abajo y hacia un lado. Sosteniendo el párpado abierto, deje que el agua fresca del grifo irrigue el ojo durante 15 minutos.</string>
    <string name="oftalmologica16">- Si ambos ojos están afectados o si los químicos están en otras partes del cuerpo, pídale a la persona que tome una ducha.</string>
    <string name="oftalmologica17">- Si la persona usa lentes de contacto y estos no salieron con el agua, pídale a la persona intente retirarlos después del procedimiento de enjuague y que vuelva a lavarse.</string>
    <string name="oftalmologica18">- Busque ayuda médica de inmediato. No se demore.</string>
    <string name="oftalmologica19">- CORTADURAS, RASGUÑOS O GOLPES EN EL OJO:</string>
    <string name="oftalmologica20">- Suavemente, aplique compresas frías para reducir la hinchazón y ayudar a controlar cualquier hemorragia. No aplique presión para controlar el sangrado.</string>
    <string name="oftalmologica21">- Si se está acumulando sangre en el ojo, cubra ambos ojos con un trozo de tela limpio o un apósito estéril.</string>
    <string name="oftalmologica22">- Busque ayuda médica de inmediato. No se demore.</string>
    <string name="oftalmologica23">CORTADURAS EN EL PÁRPADO:</string>
    <string name="oftalmologica24">- Lave el ojo cuidadosamente. Si la herida está sangrando, aplique presión suave con un pedazo de tela limpio y seco hasta que el sangrado se detenga.</string>
    <string name="oftalmologica25">- Cubra la herida con un apósito limpio.</string>
    <string name="oftalmologica26">- Coloque compresas frías sobre el apósito para reducir la hinchazón y el dolor.</string>
    <string name="oftalmologica27">- Busque ayuda médica de inmediato. No se demore.</string>
    <string name="oftalmologica28">No se debe</string>
    <string name="oftalmologica29">- No presione ni frote un ojo lesionado.</string>
    <string name="oftalmologica30">- No retire los lentes de contacto a menos que se esté desarrollando una hinchazón rápidamente, se presente una lesión química y los lentes de contacto no hayan salido con el agua, o no se pueda obtener asistencia médica rápidamente.</string>
    <string name="oftalmologica31">- No intente extraer un cuerpo extraño ni cualquier objeto que parezca estar incrustado (atorado) en alguna parte del ojo. Consiga ayuda médica inmediata.</string>
    <string name="oftalmologica32">- No use hisopos ni aplicadores de algodón, pinzas ni cualquier objeto directamente en el ojo. Los aplicadores de algodón sólo se deben usar en el párpado.</string>
</resources>