<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/cabecera">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/cruz"
                    android:layout_margin="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/ojos"
                    android:textColor="@color/fondo"
                    android:layout_margin="5dp"/>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regresar"
                android:background="@drawable/botoncolor"
                android:textColor="@color/letra"
                android:layout_margin="10dp"
                android:onClick="atras" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica1"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica2"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica3"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica4"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica5"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica6"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/oftalmologica8"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica9"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ojos1"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica10"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica11"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica12"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica13"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/oftalmologica14"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ojos2"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica15"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica16"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica17"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica18"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/oftalmologica19"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica20"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica21"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica22"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/oftalmologica23"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ojos3"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica24"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica25"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica26"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica27"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/oftalmologica28"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica29"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica30"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica31"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/oftalmologica32"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
