<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/cabecera">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/cruz"
                    android:layout_margin="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/electrocucion"
                    android:textColor="@color/fondo"
                    android:layout_margin="5dp" />
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regresar"
                android:id="@+id/btnCardiacoatras"
                android:background="@drawable/botoncolor"
                android:textColor="@color/letra"
                android:layout_margin="10dp"
                android:onClick="atras" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion1"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion2"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/electrocucion1"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion3"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion4"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion5"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion6"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion7"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion8"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion9"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/PasosASeguir"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion10"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/electrocucion2"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion11"
                android:layout_margin="8dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion12"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion13"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electrocucion14"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:layout_margin="5dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

